# FlashCard-SurrealDB

./: .env_sample  Cargo.toml  Dockerfile  README.md  test.txt
src/: lib.rs  main.rs
src/commands/: add.rs  delete.rs  edit.rs  list.rs  mod.rs  play.rs  quiz.rs
src/model/: card.rs  db.rs  mod.rs
src/utils/: input.rs  output.rs
tests/: integration_tests.rs
