[package]
name = "flashcard_master"
version = "1.0.0"
edition = "2021"
authors = ["Seok Won <ikr@kakao.com>"]

[[test]]
name = "integration_tests"

[dependencies]
clap = { version="4", features=["derive"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", default-features = true, features = ["protocol-ws", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
blake3 = "1.3.3"
rand = "0.8.5"
serde_json = "1.0.96"
